# reports-generator

./: .gitignore  README.md  pyproject.toml
cli/: generate_report.py  report_workflow.py
config/: runtime.yaml  video.yaml
reports/: check_jetson_storage.py
reports/common/: caster_config.py  config_loader.py  email_sender.py  gdrive_uploader.py
reports/gates/: gate2_closed_position_report.py
reports/pipes/: gate_cycles_exporter.py  pipe_exporter.py  verified_pipes.py
reports/shift/: shift_manager.py
reports/video/: delete_old_videos.py  source_cleanup.py  video_generator.py  video_overlay.py
src/: __init__.py
src/application/: __init__.py
src/application/services/: __init__.py
src/application/use_cases/: __init__.py  check_jetson_storage.py  cleanup_shift_sources.py  delete_old_videos.py  export_gate_cycles.py  export_raw_pipes.py  export_verified_pipes.py  gate2_closed_position_report.py  generate_missing_loadcell_videos.py  generate_shift_video.py
src/domain/: __init__.py
src/domain/models/: __init__.py  (+2 more)
src/infrastructure/: __init__.py
src/interfaces/: __init__.py
src/reports_generator/: __init__.py  bootstrap.py
tests/: test_architecture_paths.py  test_delete_old_videos.py  test_gate2_closed_position_report.py  test_multi_caster_config.py  test_shift_source_cleanup.py  test_verified_pipes.py  test_video_generator.py  test_video_overlay.py  test_workflow_source_cleanup.py
tests/integration/: test_database_readers.py  test_report_writers.py  test_video_adapters.py  test_workflow_e2e.py
tests/unit/: test_diagnosis.py  test_email.py  test_gates.py  test_paths.py  test_retry.py  test_shifts.py  test_verification.py  test_videos.py
(+69 files in other folders)
